--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "main": "./src/main.js",
   "scripts": {
     "test": "standard",
-    "fix": "standard --fix"
+    "fix": "standard --fix",
+    "backtest": "node ./src/main backtest"
   },
   "repository": {
     "type": "git",
@@ -20,5 +21,9 @@
   "homepage": "https://github.com/HollishKid/naive-bot-trader#readme",
   "devDependencies": {
     "standard": "^16.0.3"
+  },
+  "dependencies": {
+    "csv-parse": "^4.15.4",
+    "read-last-lines": "^1.8.0"
   }
 }
