--- a/package.json
+++ b/package.json
@@ -23,7 +23,10 @@
     "standard": "^16.0.3"
   },
   "dependencies": {
+    "chart.js": "^3.2.1",
+    "chartjs-plugin-zoom": "^1.0.0-beta.1",
     "csv-parse": "^4.15.4",
+    "open": "^8.0.9",
     "read-last-lines": "^1.8.0"
   }
 }
