--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "csv-parse": "^4.15.4",
     "http-terminator": "^3.0.0",
     "open": "^8.0.9",
-    "read-last-lines": "^1.8.0"
+    "read-last-lines": "^1.8.0",
+    "technicalindicators": "^3.1.0"
   }
 }
